Implementado modelo Feed que tenga los atributos: title, body, image, source y publisher.

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,3 +9,4 @@
 /*----------------- # SCSS COMPONENTS -----------------*/
 @import "components/header";
 @import "components/header-title";
+@import "components/item-articles";
