--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -14,22 +14,21 @@
   }
 
   .logo {
-    h1 {
+    font-size: 28px;
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+    font-weight: 700;
+    letter-spacing: -2px;
+
+    @media (max-width: 992px) {
       font-size: 28px;
-      margin: 0;
-      padding: 0;
-      line-height: 1;
-      font-weight: 700;
+    }
 
-      @media (max-width: 992px) {
-        font-size: 28px;
-      }
-
-      a,
-      a:hover {
-        color: #fff;
-        text-decoration: none;
-      }
+    a,
+    a:hover {
+      color: #fff;
+      text-decoration: none;
     }
 
     img {
