--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -6,7 +6,7 @@
   transition: all 0.5s;
   z-index: 997;
   transition: all 0.5s;
-  background: rgba(0, 0, 0, 0.15);
+  background: #278884;
 
   &.header-scrolled {
     background: rgba(1, 4, 136, 0.9);
@@ -135,7 +135,7 @@
         font-size: 14px;
         font-weight: 500;
         text-transform: none;
-        color: #01036f;
+        color: #278884;
         &:hover {
           color: #ffc107;
         }
@@ -165,13 +165,6 @@
       min-width: 180px;
       position: relative;
     }
-    >a {
-      &:after {
-        content: "\ea99";
-        font-family: IcoFont;
-        padding-left: 5px;
-      }
-    }
     .drop-down {
       ul {
         top: 0;
@@ -182,15 +175,6 @@
           opacity: 1;
           top: 0;
           left: 100%;
-        }
-      }
-      >a {
-        padding-right: 35px;
-        &:after {
-          content: "\eaa0";
-          font-family: IcoFont;
-          position: absolute;
-          right: 15px;
         }
       }
     }
