--- a/src/styles/components/_header-title.scss
+++ b/src/styles/components/_header-title.scss
@@ -100,6 +100,7 @@
       font-size: 28px;
       line-height: 32px;
       margin-bottom: 10px;
+      margin-top: 30px;
     }
     h2 {
       font-size: 18px;
